@@ -583,6 +583,7 @@ static sipExportedModuleDef *getTypeModule(const sipEncodedTypeDef *enc,
 static sipTypeDef *getGeneratedType(const sipEncodedTypeDef *enc,
         sipExportedModuleDef *em);
 static const sipTypeDef *convertSubClass(const sipTypeDef *td, void **cppPtr);
+static int convertPass(const sipTypeDef **tdp, void **cppPtr);
 static void *getPtrTypeDef(sipSimpleWrapper *self,
         const sipClassTypeDef **ctd);
 static int addInstances(PyObject *dict, sipInstancesDef *id);
@@ -8382,11 +8383,25 @@ static void sip_api_call_hook(const char *hookname)
  */
 static const sipTypeDef *convertSubClass(const sipTypeDef *td, void **cppPtr)
 {
-    PyTypeObject *py_type = sipTypeAsPyTypeObject(td);
-    sipExportedModuleDef *em;
-
+    /* Handle the trivial case. */
     if (*cppPtr == NULL)
         return NULL;
+
+    /* Try the conversions until told to stop. */
+    while (convertPass(&td, cppPtr))
+        ;
+
+    return td;
+}
+
+
+/*
+ * Do a single pass through the available convertors.
+ */
+static int convertPass(const sipTypeDef **tdp, void **cppPtr)
+{
+    PyTypeObject *py_type = sipTypeAsPyTypeObject(*tdp);
+    sipExportedModuleDef *em;
 
     /*
      * Note that this code depends on the fact that a module appears in the
@@ -8402,6 +8417,8 @@ static const sipTypeDef *convertSubClass(const sipTypeDef *td, void **cppPtr)
 
         while (scc->scc_convertor != NULL)
         {
+            PyTypeObject *base_type = sipTypeAsPyTypeObject(scc->scc_basetype);
+
             /*
              * The base type is the "root" class that may have a number of
              * convertors each handling a "branch" of the derived tree of
@@ -8411,27 +8428,39 @@ static const sipTypeDef *convertSubClass(const sipTypeDef *td, void **cppPtr)
              * sub-class of the root, ie. see if the convertor might be able to
              * convert the target type to something more specific.
              */
-            if (PyType_IsSubtype(py_type, sipTypeAsPyTypeObject(scc->scc_basetype)))
+            if (PyType_IsSubtype(py_type, base_type))
             {
                 void *ptr;
-                const sipTypeDef *subtype;
+                const sipTypeDef *sub_td;
 
                 ptr = cast_cpp_ptr(*cppPtr, py_type, scc->scc_basetype);
-                subtype = (*scc->scc_convertor)(&ptr);
 
-                /*
-                 * We are only interested in types that are not super-classes
-                 * of the target.  This happens either because it is in an
-                 * earlier convertor than the one that handles the type or it
-                 * is in a later convertor that handles a different branch of
-                 * the hierarchy.  Either way, the ordering of the modules
-                 * ensures that there will be no more than one and that it will
-                 * be the right one.
-                 */
-                if (subtype != NULL && !PyType_IsSubtype(py_type, sipTypeAsPyTypeObject(subtype)))
+                if ((sub_td = (*scc->scc_convertor)(&ptr)) != NULL)
                 {
-                    *cppPtr = ptr;
-                    return subtype;
+                    PyTypeObject *sub_type = sipTypeAsPyTypeObject(sub_td);
+
+                    /*
+                     * We are only interested in types that are not
+                     * super-classes of the target.  This happens either
+                     * because it is in an earlier convertor than the one that
+                     * handles the type or it is in a later convertor that
+                     * handles a different branch of the hierarchy.  Either
+                     * way, the ordering of the modules ensures that there will
+                     * be no more than one and that it will be the right one.
+                     */
+                    if (!PyType_IsSubtype(py_type, sub_type))
+                    {
+                        *tdp = sub_td;
+                        *cppPtr = ptr;
+
+                        /*
+                         * Finally we allow the convertor to return a type that
+                         * is apparently unrelated to the current convertor.
+                         * This causes the whole process to be restarted with
+                         * the new values.  The use case is PyQt's QLayoutItem.
+                         */
+                        return !PyType_IsSubtype(sub_type, base_type);
+                    }
                 }
             }
 
@@ -8446,7 +8475,7 @@ static const sipTypeDef *convertSubClass(const sipTypeDef *td, void **cppPtr)
      * Also we want this function to be safe when a class doesn't have any
      * convertors.
      */
-    return td;
+    return FALSE;
 }
 
 
